k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medical
  labels:
    app: medical-platform
